click on product and show

--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cogent-labs/react-rating-component": "^1.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "immutable": "^3.8.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-rating": "^2.0.4",
     "react-redux": "^7.2.0",
     "react-redux-form": "^1.16.14",
     "react-router-dom": "^5.1.2",
