--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux-form": "^1.16.14",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-star-rating-component": "^1.4.1",
     "redux": "^4.0.5",
     "redux-form": "^8.3.1",
     "redux-thunk": "^2.3.0",
